# boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/cg/: Application.h  GUIComponent.h  InfoImporter.h  Mesh.h  Vertex.h
include/cg/common/: Bindable.h  Handlable.h  Program.h  Shader.h  VertexArray.h
include/rendor/: Application.h
include/rendor/common/: Program.h  Shader.h
lib/: Application.cpp  InfoImporter.cpp
lib/common/: Program.cpp  Shader.cpp
tests/: CMakeLists.txt  triangle.cpp  triangle_shader.cpp
